--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,17 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a1624;
+  --foreground: #ffffff;
+  --primary: #ffc800;
+  --secondary: #feecaafe;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -23,4 +27,15 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  @apply flex flex-col items-center w-screen h-screen overflow-x-hidden
+}
+
+@layer utilities {
+  .btn {
+    @apply active:scale-95 transition-all duration-200 cursor-pointer px-6 py-3;
+  }
+
+  .cta-btn {
+    @apply bg-linear-90 from-80% from-primary to-secondary rounded-3xl text-background font-semibold;
+  }
 }
