Fixed backgrounds, logo, navbar and post-filter

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   --background: #0a1624;
   --foreground: #ffffff;
-  --primary: #ffc800;
+  --primary: #ffe600e5;
   --secondary: #feecaafe;
   --description: #cfcfcfb2;
   --custom-blue: #010124;
