--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -33,7 +34,7 @@ html {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Science Gothic", Arial, Helvetica, sans-serif;
   @apply flex flex-col items-center w-screen overflow-x-hidden;
 }
 
